# EE419

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
lab1/main/: CMakeLists.txt  Kconfig.projbuild  WiFi.c  app_main.c
lab2/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
lab2/main/: CMakeLists.txt  Kconfig.projbuild  NFCScanner.c  NFCScanner.h  RGBLED.c  app_main.c
lab4/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
lab4/main/: CMakeLists.txt  Kconfig.projbuild  MQTTClient.h  RGBLED.c  Webserver.c  WiFi.h  app_main.c
lab5/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2
lab5/certs/: README.md
lab5/certs/esp_1/: README.md
lab5/certs/esp_2/: README.md
lab5/main/: CMakeLists.txt  Kconfig.projbuild  MQTTClient.c  MQTTClient.h  NFCScanner.c  NFCScanner.h  RGBLED.c  RGBLED.h  Webserver.h  WiFi.c  app_main.c  idf_component.yml
